--- a/examples/example.html
+++ b/examples/example.html
@@ -13,7 +13,7 @@
     <script src="../node_modules/jquery/dist/jquery.js"></script>
     <script src="../node_modules/openlayers/dist/ol.js"></script>
     <script src="../node_modules/ol3-ext/dist/ol3-ext.js"></script>
-    <script src="../src/ol/control/comparisonTools.js"></script>
+    <script src="../build/comparisonTools.min.js"></script>
     <script src="example.js"></script>
   </body>
 </html>
