--- a/test/TestRunner.html
+++ b/test/TestRunner.html
@@ -14,15 +14,11 @@
             var expect = chai.expect;
         </script>
         <script src="../node_modules/jquery/dist/jquery.js"></script>
-        <script src="../node_modules/openlayers/dist/ol-debug.js"></script>
-        <script src="../node_modules/ol3-ext/dist/ol3-ext.js"></script>
-        <script src="../src/ol/control/comparisonTools.js"></script>
+        <script src="lib/openlayers/ol.js"></script>
+        <script src="../node_modules/ol-ext/dist/ol-ext.js"></script>
+        <script src="../dist/comparisonTools.js"></script>
         <script src="spec/comparisonTools.test.js"></script>
-        <script src="spec/hSlider.test.js"></script>
-        <script src="spec/vSlider.test.js"></script>
-        <script src="spec/scope.test.js"></script>
-        <script src="spec/clipLayer.test.js"></script>
-        <script src="spec/doubleMap.test.js"></script>
+
         <script>
             if (window.mochaPhantomJS) { mochaPhantomJS.run(); }
             else { mocha.run(); }
