--- a/examples/package/example.html
+++ b/examples/package/example.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.rawgit.com/Viglino/ol-ext/master/dist/ol-ext.min.css">
-    <link rel="stylesheet" href="https://openlayers.org/en/v5.1.3/css/ol.css">
+    <!-- <link rel="stylesheet" href="https://cdn.rawgit.com/Viglino/ol-ext/master/dist/ol-ext.min.css"> -->
+    <!-- <link rel="stylesheet" href="https://openlayers.org/en/v5.1.3/css/ol.css"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="example.css">
+    <link rel="stylesheet" href="dist/example.css">
   </head>
   <body>
     <div id="map" tabindex="0"></div>
