make example fullscreen

--- a/examples/old-fashioned/example.html
+++ b/examples/old-fashioned/example.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="example.css">
   </head>
   <body>
-    <div>
+    <div id="map-container">
       <div id="map" tabindex="0"></div>
     </div>
     <div>
