--- a/examples/old-fashioned/example.html
+++ b/examples/old-fashioned/example.html
@@ -16,25 +16,19 @@
       Change left layer:
       <select id="leftLayerSelect" onchange="window.changeLeftLayer()">
         <option value="osm">osm</option>
-        <option value="mapbox" selected>mapbox</option>
+        <option value="arcgis" selected>arcgis</option>
       </select>
     </div>
     <div>
       Change right layer:
       <select id="rightLayerSelect" onchange="window.changeRightLayer()">
-        <option value="mapbox">mapbox</option>
+        <option value="arcgis">arcgis</option>
         <option value="osm" selected>osm</option>
       </select>
     </div>
   </body>
-  <script src="../../node_modules/jquery/dist/jquery.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/openlayers/4.6.4/ol.js"></script>
   <script src="https://cdn.rawgit.com/Viglino/ol-ext/master/dist/ol-ext.min.js"></script>
   <script src="../../dist/comparisontools.js"></script>
   <script src="example.js"></script>
-  <script>
-    /*function changeLeftLayer() {
-      console.log("toutou");
-    }*/
-  </script>
 </html>
